--- a/Prevu.Synoptics.V6120_Novatex/Pages/P170.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P170.xaml
@@ -9,21 +9,14 @@
              x:Class="Prevu.Synoptics.P170" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
-        <Labels:Pipe Width="156" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="603" Canvas.Top="633" VisibilityComponent="166-32-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="38" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="706" Canvas.Top="574" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="38" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="706" Canvas.Top="574" VisibilityComponent="166-32-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="48" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="679" Canvas.Top="557" VisibilityComponent="166-31-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="58" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="669" Canvas.Top="557" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="52" StatusComponent="160-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="287" Canvas.Top="153" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -45,21 +38,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="164" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="165" Canvas.Top="618" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:Pipe Width="178" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="130" Canvas.Top="622" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="184" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="100" Canvas.Top="629" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -123,14 +102,14 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="48" StatusComponent="171-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="706" Canvas.Top="250" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="48" StatusComponent="171-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="706" Canvas.Top="250" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="DirectionTwo">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="52" StatusComponent="171-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="849" Canvas.Top="252" HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct">
+        <Labels:Pipe Width="52" StatusComponent="171-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="849" Canvas.Top="252" HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Direction="DirectionOne">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -173,7 +152,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="308" StatusComponent="165-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="992" Canvas.Top="212" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="308" StatusComponent="165-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="992" Canvas.Top="212" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="166-31-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -204,7 +183,7 @@
         <Labels:Pipe Width="84" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="538" Canvas.Top="651" VisibilityComponent="176-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="104" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="528" Canvas.Top="660" VisibilityComponent="176-31-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="563" StatusComponent="165-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="597" Canvas.Top="50" VisibilityComponent="166-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="541" StatusComponent="165-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="607" Canvas.Top="60" VisibilityComponent="166-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="541" StatusComponent="165-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="607" Canvas.Top="60" VisibilityComponent="166-31-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="208" StatusComponent="165-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="495" Canvas.Top="153" VisibilityComponent="166-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -212,7 +191,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="208" StatusComponent="165-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="505" Canvas.Top="162" VisibilityComponent="166-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="208" StatusComponent="165-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="505" Canvas.Top="162" VisibilityComponent="166-31-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -220,7 +199,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="73" StatusComponent="165-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="528" Canvas.Top="255" VisibilityComponent="166-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="93" StatusComponent="165-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="518" Canvas.Top="264" VisibilityComponent="166-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="93" StatusComponent="165-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="518" Canvas.Top="264" VisibilityComponent="166-31-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="518" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="618" Canvas.Top="70" VisibilityComponent="176-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="496" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="628" Canvas.Top="80" VisibilityComponent="176-31-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="156" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="923" Canvas.Top="492" HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" VisibilityComponent="176-32-CV1" VisibilitySignal="LS2">
@@ -273,31 +252,27 @@
         <Labels:Pipe Width="172" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="481" Canvas.Top="679" VisibilityComponent="176-31-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct"/>
         <Labels:Pipe Width="133" StatusComponent="165-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="481" Canvas.Top="396" VisibilityComponent="166-32-CV1" VisibilitySignal="LS2" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="142" StatusComponent="165-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="472" Canvas.Top="406" VisibilityComponent="166-31-CV1" VisibilitySignal="LS2" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="268" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="537" Canvas.Top="567" VisibilityComponent="166-32-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Labels:Pipe Width="278" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="532" Canvas.Top="572" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="428" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="245" Canvas.Top="699" VisibilityComponent="166-32-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="232" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="555" Canvas.Top="275" VisibilityComponent="166-32-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="232" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="555" Canvas.Top="275" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="210" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="555" Canvas.Top="253" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="220" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="541" Canvas.Top="258" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="125" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="489" Canvas.Top="357" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="26" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="636" Canvas.Top="357" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="233" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="235" Canvas.Top="357" VisibilityComponent="166-31-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="78" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="712" Canvas.Top="187" HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -312,16 +287,12 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="95" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="658" Canvas.Top="150" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct"/>
-        <Labels:Pipe Width="72" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="669" Canvas.Top="160" VisibilityComponent="166-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Center" Color="ByProduct"/>
+        <Labels:Pipe Width="104" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="649" Canvas.Top="150" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct"/>
+        <Labels:Pipe Width="72" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="669" Canvas.Top="160" HorizontalAlignment="Center" VerticalAlignment="Center" Color="ByProduct"/>
         <Labels:Pipe Width="125" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="489" Canvas.Top="367" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="30" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="636" Canvas.Top="367" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="261" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="207" Canvas.Top="367" VisibilityComponent="166-31-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="125" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="489" Canvas.Top="378" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="30" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="636" Canvas.Top="378" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="288" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="180" Canvas.Top="378" VisibilityComponent="166-31-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="261" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="207" Canvas.Top="367" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="263" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="677" Canvas.Top="367" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="61" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="677" Canvas.Top="378" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="160" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="656" Canvas.Top="513" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -329,7 +300,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="14" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="729" Canvas.Top="384" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Labels:Pipe Width="26" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="723" Canvas.Top="378" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -350,9 +321,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="466" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="217" Canvas.Top="709" VisibilityComponent="166-31-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="738" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="190" Canvas.Top="720" VisibilityComponent="166-31-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="34" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="909" Canvas.Top="735" VisibilityComponent="166-32-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="711" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="217" Canvas.Top="709" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="44" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="904" Canvas.Top="729" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -373,21 +343,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="222" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="126" Canvas.Top="248" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:Pipe Width="232" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="93" Canvas.Top="253" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="242" StatusComponent="160-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="61" Canvas.Top="259" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
