--- a/Prevu.Synoptics.V4300_Covinil/Pages/P230.xaml
+++ b/Prevu.Synoptics.V4300_Covinil/Pages/P230.xaml
@@ -166,8 +166,8 @@
     </Labels:Pipe>
     <Labels:Pipe Width="82" StatusComponent="212-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="209" Canvas.Top="631" HorizontalAlignment="Left" VerticalAlignment="Center" PipeHeight="Medium"/>
     <Labels:Pipe Width="79" StatusComponent="212-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="205" Canvas.Top="776" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="87" StatusComponent="230-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="241" Canvas.Top="395" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="76" StatusComponent="212-31-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="228" Canvas.Top="212" HorizontalAlignment="Center" VerticalAlignment="Top" Color="Air"/>
+    <Labels:Pipe Width="87" StatusComponent="230-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="265" Canvas.Top="380" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="60" StatusComponent="212-31-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="229" Canvas.Top="212" HorizontalAlignment="Left" VerticalAlignment="Center" Color="Air"/>
     <Labels:Pipe Width="112" StatusComponent="212-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="240" Canvas.Top="254" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="72" StatusComponent="212-01-MA1" PipeHeight="Medium" Canvas.Left="174" Canvas.Top="306" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
@@ -194,8 +194,8 @@
     <Machines:V01_ARF_NipRollFeeder Canvas.Left="136" Canvas.Top="153" Height="134" Width="130" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_MU_Grinder Canvas.Left="106" Canvas.Top="333" Height="160" Width="202" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="275" Canvas.Top="755" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:V01_CV_Valve_wColor Canvas.Left="347" Canvas.Top="242" Color="Water" Height="30" Width="50" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_CV_Valve_wColor Canvas.Left="321" Canvas.Top="383" Color="Water" Height="30" Width="50" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_CV_Valve_wColor Canvas.Left="343" Canvas.Top="242" Color="Water" Height="30" Width="50" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_CV_Valve_wColor Canvas.Left="343" Canvas.Top="368" Color="Water" Height="30" Width="50" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Rectangle Height="2" Stroke="Black" Width="64" RenderTransformOrigin="0.5,0.5" Canvas.Left="143" Canvas.Top="118" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:External Height="44" Width="40" RenderTransformOrigin="0.5,0.5" Canvas.Left="106" Canvas.Top="97" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Machines:External.RenderTransform>
@@ -246,21 +246,21 @@
         </TransformGroup>
       </Machines:V01_CV_Valve.RenderTransform>
     </Machines:V01_CV_Valve>
-    <Machines:V01_CV_Valve_wColor Canvas.Left="298" Canvas.Top="200" Color="Air" Height="30" Width="50" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_CV_Valve_wColor Canvas.Left="287" Canvas.Top="200" Color="Air" Height="30" Width="50" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Rectangle Height="47" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="1393" Canvas.Top="772" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:External Height="44" Width="40" RenderTransformOrigin="0.5,0.5" Canvas.Left="1374" Canvas.Top="739" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DetailsLabel ComponentName="810-LEV" DetailsPageName="D810_2" HideComponentName="True" Canvas.Left="938" Canvas.Top="292" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DetailsLabel ComponentName="810-HYD" DetailsPageName="D810" Canvas.Left="876" Canvas.Top="417" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Labels:DetailsLabel ComponentName="820-LEV" DetailsPageName="D820_2" HideComponentName="True" Canvas.Left="1302" Canvas.Top="213" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DetailsLabel ComponentName="820-HYD" DetailsPageName="D820" Canvas.Left="1237" Canvas.Top="337" HorizontalAlignment="Center" VerticalAlignment="Top" />
-    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="212-31-CV1" Canvas.Left="274" Canvas.Top="145"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="212-31-CV1" Canvas.Left="267" Canvas.Top="145"/>
     <Labels:DeviceLabel VerticalAlignment="Top" Canvas.Top="555" Canvas.Left="255" HorizontalAlignment="Center" ComponentName="234-01-MA1"/>
     <Labels:DeviceLabel ComponentName="230-01-YA1" Canvas.Left="42" Canvas.Top="403" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="230-02-MA1" Canvas.Left="42" Canvas.Top="469" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="230-01-MA1" Canvas.Left="164" Canvas.Top="343" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel Canvas.Top="699" Canvas.Left="255" ComponentName="244-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="212-21-CV1" Canvas.Left="323" Canvas.Top="278" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="230-21-CV1" Canvas.Left="301" Canvas.Top="419" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="230-21-CV1" Canvas.Left="323" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Labels:DeviceLabel Canvas.Top="28" Canvas.Left="215" ComponentName="212-71-ECS1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="808-31-CV1" Canvas.Left="396" Canvas.Top="564" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Labels:DeviceLabel ComponentName="818-31-CV1" Canvas.Left="519" Canvas.Top="710" HorizontalAlignment="Center" VerticalAlignment="Top" />
@@ -309,7 +309,7 @@
         </TransformGroup>
       </Misc:DashedLine.RenderTransform>
     </Misc:DashedLine>
-    <TextBlock Width="94" Canvas.Top="747" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="876" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Top"><Run Text="S41"/><Run Language="it-it" Text="3"/></TextBlock>
+    <TextBlock Width="94" Canvas.Top="791" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="876" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Top"><Run Text="S41"/><Run Language="it-it" Text="3"/></TextBlock>
     <TextBlock Width="94" Canvas.Top="285" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="1390" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Top"><Run Text="S41"/><Run Language="it-it" Text="2"/></TextBlock>
     <TextBlock Width="94" Canvas.Top="285" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="1032" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Top"><Run Language="it-it" Text="S411"/></TextBlock>
     <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="97" Canvas.Left="1432" Canvas.Top="632" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -323,5 +323,7 @@
         </TransformGroup>
       </Misc:DashedLine.RenderTransform>
     </Misc:DashedLine>
+    <Labels:DeviceLabel Canvas.Top="721" Canvas.Left="894" ComponentName="SILOS-DISCHARGE" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel Canvas.Top="118" Canvas.Left="593" ComponentName="SILOS-FILLING" HorizontalAlignment="Left" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
