--- a/Prevu.Synoptics.V4300_Covinil/PlantView.xaml
+++ b/Prevu.Synoptics.V4300_Covinil/PlantView.xaml
@@ -13,20 +13,21 @@
              lex:ResxLocalizationProvider.DefaultDictionary="Resources"             
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}" >
-    <Canvas Height="850" Width="1550" >
-        <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="771" Canvas.Top="339" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:QX_HMI Height="66" Width="56" Canvas.Left="488" Canvas.Top="473" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:GroupLabel GroupName="230" Canvas.Left="667" Canvas.Top="488" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="ESTOP-AREA-01" Canvas.Left="471" Canvas.Top="281" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="Q41" Canvas.Left="820" Canvas.Top="281" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="S410" Canvas.Left="654" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="HMI-01" Canvas.Left="471" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:GroupLabel GroupName="810" Canvas.Left="779" Canvas.Top="488" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="S411" Canvas.Left="766" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:GroupLabel GroupName="820" Canvas.Left="891" Canvas.Top="488" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="S412" Canvas.Left="878" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:GroupLabel GroupName="870" Canvas.Left="1003" Canvas.Top="488" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="S413" Canvas.Left="990" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+  <Canvas Height="850" Width="1550" >
+    <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="761" Canvas.Top="339" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:QX_HMI Height="66" Width="56" Canvas.Left="478" Canvas.Top="473" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:GroupLabel GroupName="230" Canvas.Left="657" Canvas.Top="488" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="ESTOP-AREA-01" Canvas.Left="461" Canvas.Top="281" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="Q41" Canvas.Left="810" Canvas.Top="281" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="S410" Canvas.Left="644" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="HMI-01" Canvas.Left="461" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:GroupLabel GroupName="810" Canvas.Left="769" Canvas.Top="488" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="S411" Canvas.Left="756" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:GroupLabel GroupName="820" Canvas.Left="881" Canvas.Top="488" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="S412" Canvas.Left="868" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:GroupLabel GroupName="870" Canvas.Left="993" Canvas.Top="488" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="S413" Canvas.Left="980" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel Canvas.Top="282" Canvas.Left="572" ComponentName="212-71-ECS2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
-    </Canvas>
+  </Canvas>
 </UserControl>
